test_regress/t/t_forceable_unpacked_bad.out
%Error-UNSUPPORTED: t/t_forceable_unpacked_bad.v:8:9: Unsupported: Forcing unpacked arrays: t__DOT__unpacked
    8 |   logic unpacked[1]  /*verilator forceable*/;
      |         ^~~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
